# lms-backend

./: README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
app/: config.py  database.py  dependencies.py  main.py  schemas.py
app/api/routes/: admin.py  auth.py  disputes.py  health.py  litigation.py  profile.py
app/services/: auth.py  notifications.py  storage.py
